# ChangeLog for gnome-extra/gnome-contacts
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-contacts/ChangeLog,v 1.15 2013/03/30 15:01:39 pacho Exp $

  30 Mar 2013; Pacho Ramos <pacho@gentoo.org> gnome-contacts-3.8.0.ebuild:
  Don't run vala_src_prepare two times (#463776 by Harris Landgarten).

  29 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-contacts-3.4.1.ebuild:
  Clean up old revision.

*gnome-contacts-3.8.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org> +gnome-contacts-3.8.0.ebuild:
  Version bump for Gnome 3.8

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gnome-contacts-3.6.2.ebuild:
  Add ~arm, wrt bug #449220

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> gnome-contacts-3.6.2.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> gnome-contacts-3.6.2.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> gnome-contacts-3.6.2.ebuild:
  Add ~ia64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> gnome-contacts-3.6.2.ebuild:
  Add ~ppc64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> gnome-contacts-3.6.2.ebuild:
  Add ~ppc, wrt bug #449220

  19 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-contacts-3.6.2.ebuild:
  Add some subslot operators.

*gnome-contacts-3.6.2 (18 Dec 2012)

  18 Dec 2012; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-contacts-3.2.2.ebuild, +gnome-contacts-3.6.2.ebuild, metadata.xml:
  Version bump for Gnome 3.6. Fix license.

*gnome-contacts-3.4.1 (14 May 2012)

  14 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +gnome-contacts-3.4.1.ebuild:
  Version bump for gnome-3.4 with an updated UI.

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> gnome-contacts-3.2.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  06 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-contacts-3.2.2.ebuild: