@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST gnome-contacts-3.6.2.tar.xz 610024 SHA256 7d1b6a8e395b15bf150062f332348549cf9deb38dfa3aad9994f70e71d8449fa SHA512 0db305697c420ac958273d24e46afa2421d43c34fd31e5d20f95d333092ce6d894abe56208cf312133e4a062d0092b1b5f3dcc2c79c1e431f3439ab9a4b81ca1 WHIRLPOOL 3659e0f0851879b5db38c822acdc000e1aa88e7b146467f70f1d1e350ef7ea93262e0ea7aee58cfcba6422afe758be70748a3439b3e300b541971f582ee68306
 DIST gnome-contacts-3.8.0.tar.xz 637176 SHA256 cf4e183b0daff0b1644ea1f6043b9f3f1ce1703d74c313a5154c78fd7fd7365e SHA512 6f937592ccad0b57ec9f9f5125d1d95e12733f69517a6a4b642bf02b49dbe5e9f8e688ef37d67aafa56def6d0f04fec7fc3bce9b880864f22023453d7ce7b37e WHIRLPOOL cc33fb0ec8a180cec95c358b39dcac8f2b19ae919ea6149da4738e8d85a99a341a545764c60aed611cf0fab367877667cf98b8b9723f6cc2a0f1fb7687a9f6da
+DIST gnome-contacts-3.8.1.tar.xz 711604 SHA256 c9b2ffba754f4e1e37788195c814b12dfbf79b35042cd811b8690f890572edcb SHA512 6a0394a7d5231e2f67b400e610ce77598e534b561b93ef47dcbc2e47e938e67798f8b4602da1a1eb4984700686e1480f52ce9088911f9be04cafae30a728ca95 WHIRLPOOL 4c9fc2125a060db731091d2fec59a0ea08c3700f6361cb632031ca366e16ea04426907432d60beb581bed1ee3c7925f98abd5bd96f50ff294a63dbce06f1011a
 EBUILD gnome-contacts-3.6.2.ebuild 1571 SHA256 311472d6094f74e1bc2222a7a3b52b8b40139b16c29f42ee0345f230ec6d7d24 SHA512 c735516c5e03b65776fefc4b6c12efa0a3c9331c5ed90c81e0b3cabd137aef6ae4321f223b988ca4b70cb7e6f9b8fd3976d5ae3d6bba1a173163068df0acd9e7 WHIRLPOOL e84da9063aba804d00e3aea06cdb77a237a237589341750405e42d8e510d318e437161e2b967b6924ee7129d3c92cb9db95e4408c3ccf7015818b42ec3e69f86
 EBUILD gnome-contacts-3.8.0.ebuild 1581 SHA256 cc90eb9b8ffc3a2c8e5b6e2b297939e50bb77caa4e958d75bc979bc2220ed0b9 SHA512 3c7f21143ebdc9a655fdd26c78c7c9db7a964f1f3f0a162d54ae4300c8e828a6015e19241e4a36dc0a16a118c254ca2174d9bdaa635768d4cd612dc9e7f9e4a4 WHIRLPOOL 5cd45c22fbcaaa669ccced509cbd2a83e0011d98c2af38ab845b394af931e344e7ef1e4a876a0dc4e263c58c17ee3c5e489d9b9e1058c4f42a82c567863953af
-MISC ChangeLog 2337 SHA256 db0d4111059040e91793ebbcacb92b1d6ca4763d2357ea3fb586e7f7b1e5252f SHA512 20ca872153b6e8df01698b93535af1a37541ecec627f3895b69fd28ece54b2740534f42559c05a7d114e5202c6caf697ece06786471d882ba5abb4dbcd1ced3b WHIRLPOOL 8d806ceab052a0213386d53b2b3d04a06fc5b0cc50fbfc8af9c693f60516fd82433d2da72de9cb3f46babab2869b7301a00f570f170057680c4d180699a70f30
+EBUILD gnome-contacts-3.8.1.ebuild 1561 SHA256 a1064e946f373860ae4a712c0f2becc9b556ed2423db28a020fb291517644daa SHA512 bbb00c3960610d9de74dacbf9ef376ceed120a4211a1b1337c3f3ec87c8271e66f41329f7dccef8e9fd2595b44997aa098131ac3bd483139710589da38ac0ab9 WHIRLPOOL 0f59ce3a761761a19f626b114592879da4ea44da2d36a32225088584dd604f1af85f5b6975c238869bfca1bca772c19b42e534b79650fa144f2ca4c5cf99b7ee
+MISC ChangeLog 2466 SHA256 fc0cdfcae4ab9707c084c8caff52c074f38f179752168fced83f53761209423e SHA512 f6a93c85315f04c517087a0ecbde98193b0a62dfe49f208ebcd185ff2c1dc60eeffa026c3a74c23e98ab6dfd7018240714e51053ad8d06349330af3a8d000cce WHIRLPOOL 2e2e08f4001d936a55edc04dda59433439a6939ee882cfe56eb010c13f764e5c92e885f0b5458e5fb69ed15d54e786e78686a4349d84d47bf9ae2ee159c2d550
 MISC metadata.xml 160 SHA256 4d793ecb79b17794248102d8409d16bc27b1022c72038bd2d1241e129693d5f2 SHA512 677650c05f31fc27035e12f3f5e4b095715dfe12d2d3483f800bfbc6e986a98dbb1997cd52ad7a177b5c120c9b87fe5a2452a4f0f9852ac9a58262e0c5d576c9 WHIRLPOOL 070602fb27fee6a25035c9e93f5c2422270a5781fd11dac318d3f5c32cf9e49163abf7999729df230d3e181b6a1362982744e1f0ac016bf59a3458ae23abbb83
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlFW/lQACgkQCaWpQKGI+9QntQCfW2evYBu1GSqYIB38oDpODt9U
-YlMAn1dHrmw2ljViILhraLdOqA2dVRlF
-=NIs8
+iEYEAREIAAYFAlFxp1MACgkQCaWpQKGI+9RzSgCeMZR0CGJxzkLU2mTZ8TiC19fU
+oaAAn3zStphX6x5Zs7IE/xdhW0DEuVVt
+=K2xo
 -----END PGP SIGNATURE-----
