@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/gnome-contacts
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-contacts/ChangeLog,v 1.15 2013/03/30 15:01:39 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-contacts/ChangeLog,v 1.16 2013/04/19 20:21:38 pacho Exp $
+
+*gnome-contacts-3.8.1 (19 Apr 2013)
+
+  19 Apr 2013; Pacho Ramos <pacho@gentoo.org> +gnome-contacts-3.8.1.ebuild:
+  Version bump
 
   30 Mar 2013; Pacho Ramos <pacho@gentoo.org> gnome-contacts-3.8.0.ebuild:
   Don't run vala_src_prepare two times (#463776 by Harris Landgarten).
